[package]
name = "goes_arch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
crossbeam-channel = "^0.5.1"
log = {version = "^0.4.14", features=["max_level_debug", "release_max_level_debug", "std"]}
rust-s3 = {git = "https://github.com/durch/rust-s3/", tag="0.27.0-rc3", features = ["blocking"]}
strum = { version = "0.21", features = ["derive"] }
threadpool = "^1.8.1"
